# DeeplabV3Plus_MaterialSegmentation

./: .gitignore  Github-token.txt  README.md  htcv-deeblabv3-testing-v1.ipynb  pyproject.toml
config/: config1.yaml
src/dlcv/: config.py  dataset.py  model.py  plot.py  train.py  training.py  training_unet.py  utils.py  visualize.py
src/dlcv/config/: config1.yaml  config2.yaml  config3.yaml  config_kaggle.yaml  kaggle_test1.yaml
src/dlcv/saved_models/: fixture_weights_dont_delete_this.pth  test_model.pth  underfitting_run.pth
